# hosta

./: .gitignore  CLAUDE.md  Dockerfile  README.md
cmake/: CppUTestAddTests.cmake  DetermineHOSTCCompiler.cmake  DetermineHOSTCXXCompiler.cmake  HostBuild.cmake  HostCompilerUtilities.cmake  HostTest.cmake  UnityFixtureAddTests.cmake
sample/: CMakeLists.txt  README.md
sample/calculator/: main.c
sample/error/: error.h
sample/evaluator/: evaluator.c  evaluator.h
sample/parser/: parser.c  parser.h
sample/test/: CMakeLists.txt  cpputest_main.cpp  googletest_main.cpp  unity_fixture_test_main.c  unity_test_main.c
sample/tokenizer/: tokenizer.c  tokenizer.h
tests/: add_host_custom_target_test.py  add_host_dependencies_test.py  add_host_executable_test.py  add_host_library_test.py  add_host_test_test.py  cmake_fixture_paths_test.py  conftest.py  cpputest_add_host_tests_test.py  cpputest_discover_host_tests_test.py  do_host_compile_test.py  enable_host_languages_test.py  find_and_copy_file_test.py  find_host_binutils_test.py  find_host_compiler_id_test.py  find_host_compiler_test.py  find_host_language_test.py  get_host_absolute_paths_test.py  get_host_file_dependencies_test.py  get_host_include_flag_test.py  get_host_standard_compile_option_test.py  get_host_target_name_test.py  get_host_target_names_test.py  get_host_target_properties_test.py  get_host_target_property_test.py  gtest_add_host_tests.py  gtest_add_host_tests_test.py  gtest_discover_host_tests.py  gtest_discover_host_tests_test.py  host_logging_error_test.py  load_host_compiler_preferences_test.py  parse_host_compiler_abi_info_test.py  remove_host_namespace_prefix_test.py  save_host_compiler_preferences_test.py  separate_host_scoped_arguments_test.py  set_host_platform_default_options_test.py  set_host_target_properties_test.py  set_host_target_property_test.py  testing_cc_test.py  testing_clang_test.py  testing_clangpp_test.py  (+14 more)
tests/project/: CMakeLists.txt
tests/project/test/: CMakeLists.txt  cpputest_main.cpp  unity_fixture_test_main.c
